# liut-clang-tidy-rules

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
ext/: CMakeLists.txt
math/: CMakeLists.txt  math.cpp  math.h  resource.rc.in
math/tests/: CMakeLists.txt  math_test.cpp
